--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7",
-    "python-shell": "^5.0.0"
+    "path": "^0.12.7"
   }
 }
