--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start-server": "SET NODE_ENV=production&&SET MONGO_USER=EslamWater&&SET MONGO_PASSWORD=EslamWater&&SET MONGO_DEFAULT_DATABASE=AquaGo&&node app.js"
   },
   "author": "",
   "license": "ISC",
